# leme

./: .gitattributes  .gitignore  README.md
datasets/: manifest.schema.json  registry.yaml
datasets/adapters/: hf_document_sources.py
docs/architecture/: contracts.md  phase-01-system-design.md
docs/architecture/adr/: README.md
docs/datasets/: data-card-template.md  huggingface-source-adapters.md  phase-02-dataset-collection.md
docs/layout_understanding/: phase-04-document-understanding.md  phase-04-evaluation-report.md
docs/ocr/: phase-03-ocr-pipeline.md
experiments/phase-03/: 2026-07-22_ppocrv5_t4_smoke.json
experiments/phase-04/: 2026-07-22_layoutlmv3_cord_external_baseline.json  2026-07-22_layoutlmv3_funsd_external_baseline.json  2026-07-22_layoutlmv3_t4_renderer_jitter.json  2026-07-22_layoutlmv3_t4_synthetic_pipeline.json  2026-07-22_layoutlmv3_t4_template_holdout.json
layout_understanding/: model-registry.yaml  pyproject.toml  train_layoutlmv3.py  train_source_layoutlmv3.py
layout_understanding/src/verivision_layout/: __init__.py  evaluate.py  geometry.py
layout_understanding/training/: layoutlmv3_token_classification.yaml
ocr/: model-registry.yaml  pyproject.toml
ocr/src/verivision_ocr/: __init__.py  evaluate.py  metrics.py
scripts/: validate_dataset_manifest.py
synthetic_data/: README.md  generate_layout_dataset.py
tests/: test_layout_understanding.py  test_ocr_evaluator.py  test_ocr_metrics.py  test_validate_dataset_manifest.py
tests/fixtures/datasets/: research_only.jsonl  valid_production.jsonl
(+2 files in other folders)
