[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verivision-layout"
version = "0.1.0"
description = "Layout-aware document understanding contracts and evaluation"
requires-python = ">=3.11"

[project.scripts]
verivision-layout-evaluate = "verivision_layout.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]
