[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verivision-ocr"
version = "0.1.0"
description = "OCR evaluation and contract utilities for VeriVision AI"
requires-python = ">=3.11"

[project.scripts]
verivision-ocr-evaluate = "verivision_ocr.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]
